--- a/dashboard/src/theme.css
+++ b/dashboard/src/theme.css
@@ -34,7 +34,7 @@
 html,
 body,
 #root {
-  height: 100%;
+  min-height: 100%;
   margin: 0;
 }
 
